Requested changes from the review
Signed-off-by: Konstantin Polihronov <polychronov@gmail.com>